# papers

./: README.md  papers.cabal
a-program-to-solve-sudoku/: Main.hs
a-theory-of-changes-for-higher-order-languages/: Main.hs
applicative-programming-with-effects/: Main.hs
clowns-to-the-left-of-me-jokers-to-the-right-dissecting-data-structures/: Main.hs
fixing-idioms/: Main.hs
functional-programming-with-bananas-lenses-envelopes-and-barbed-wire/: Main.hs
it's-as-easy-as-1-2-3/: Main.hs
nondeterminism-with-referential-transparency-in-functional-programming-languages/: Main.hs
probabilistic-functional-programming-in-haskell/: Main.hs
tracing-monadic-computations-and-representing-effects/: Main.hs
