cabal-version: 2.4
name: papers
version: 0
library functional-programming-with-bananas-lenses-envelopes-and-barbed-wire
  build-depends: base ^>= 4.14
  exposed-modules: Main
  default-language: Haskell2010
  hs-source-dirs: functional-programming-with-bananas-lenses-envelopes-and-barbed-wire

library it-is-as-easy-as-1-2-3
  build-depends: base ^>= 4.14
               , containers ^>= 0.6
               , QuickCheck ^>= 2.14
  exposed-modules: Main
  default-language: Haskell2010
  hs-source-dirs: it's-as-easy-as-1-2-3
